# Pygame-Voice-Interaction

./: .gitignore  README.md  _smoke_test.py  constants.py  main.py  merchant_dialogue.py  pyproject.toml
entities/: enemies.py  player.py
inventory/: items.py  manager.py  overlay.py
scenes/: base.py  battle_scene.py  boss_scene.py  city_scene.py  game_over_scene.py  shop_scene.py  start_scene.py  wilderness_scene.py
ui/: components.py
utils/: assets.py  config.py  helpers.py
voice/: assistant.py  recorder.py  service.py  transcriber.py  tts.py
