[project]
name = "pygame-ai"
version = "0.1.0"
description = "Minimal 2D RPG built with pygame"
requires-python = ">=3.11,<4.0"
dependencies = [
  "pygame>=2.6.0,<2.7.0",
  "openai>=1.42.0,<2.0.0",
  "langchain>=0.2.2,<0.3.0",
  "langchain-openai>=0.1.7,<0.2.0",
  "langgraph>=0.0.62,<0.1.0",
  "elevenlabs>=1.3.0,<2.0.0",
  "sounddevice>=0.4.6,<0.5.0",
  "soundfile>=0.12.1,<0.13.0",
  "numpy>=1.26.0,<2.0.0"
]

[project.scripts]
pyvale = "main:main"

[tool.uv]
